unpackaged/main/default/objects/LendVantage_Input__c/LendVantage_Input__c.object-meta.xml
<CustomObject>
    <label>LendVantage Input</label>
    <nameField>
        <displayFormat>LV-{0000000}</displayFormat>
        <label>LendVantage Input Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LendVantage Inputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>