unpackaged/main/default/objects/LendVantage_Input__c/fields/Average_Daily_Bank_Balance__c.field-meta.xml
<CustomField>
    <fullName>Average_Daily_Bank_Balance__c</fullName>
    <label>Average Daily Bank Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>