unpackaged/main/default/objects/LendVantage_Input__c/fields/Business_Credit_Pull__c.field-meta.xml
<CustomField>
    <fullName>Business_Credit_Pull__c</fullName>
    <label>Business Credit Pull</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
            <value>
                <fullName>Hard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>