unpackaged/main/default/objects/LendVantage_Input__c/fields/Company_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Company_Address_1__c</fullName>
    <label>Company Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>