unpackaged/main/default/objects/LendVantage_Input__c/fields/Company_DBA__c.field-meta.xml
<CustomField>
    <fullName>Company_DBA__c</fullName>
    <label>Company DBA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>