unpackaged/main/default/objects/LendVantage_Input__c/fields/Company_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Zip_Code__c</fullName>
    <label>Company Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>