unpackaged/main/default/objects/LendVantage_Input__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LendVantage Inputs</relationshipLabel>
    <relationshipName>LendVantage_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>