unpackaged/main/default/objects/LendVantage_Input__c/fields/Contactable_Error_Field__c.field-meta.xml
<CustomField>
    <fullName>Contactable_Error_Field__c</fullName>
    <label>Contactable Error Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>