unpackaged/main/default/objects/LendVantage_Input__c/fields/Contactable_Errors__c.field-meta.xml
<CustomField>
    <fullName>Contactable_Errors__c</fullName>
    <label>Contactable Errors</label>
    <type>TextArea</type>
</CustomField>