unpackaged/main/default/objects/LendVantage_Input__c/fields/Contactable_Status__c.field-meta.xml
<CustomField>
    <fullName>Contactable_Status__c</fullName>
    <label>Contactable Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>