unpackaged/main/default/objects/LendVantage_Input__c/fields/Contactable_Success__c.field-meta.xml
<CustomField>
    <fullName>Contactable_Success__c</fullName>
    <label>Contactable Success</label>
    <length>255</length>
    <type>Text</type>
</CustomField>