unpackaged/main/default/objects/LendVantage_Input__c/fields/Factor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Factor_Rate__c</fullName>
    <label>Factor Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>