unpackaged/main/default/objects/LendVantage_Input__c/fields/FICO_Score__c.field-meta.xml
<CustomField>
    <fullName>FICO_Score__c</fullName>
    <label>FICO Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>