unpackaged/main/default/objects/LendVantage_Input__c/fields/Gross_Monthly_Rev__c.field-meta.xml
<CustomField>
    <fullName>Gross_Monthly_Rev__c</fullName>
    <label>Gross Monthly Rev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>