unpackaged/main/default/objects/LendVantage_Input__c/fields/Home_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Home_Address_1__c</fullName>
    <label>Home Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>