unpackaged/main/default/objects/LendVantage_Input__c/fields/Home_City__c.field-meta.xml
<CustomField>
    <fullName>Home_City__c</fullName>
    <label>Home City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>