unpackaged/main/default/objects/LendVantage_Input__c/fields/Home_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Home_Zip_Code__c</fullName>
    <label>Home Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>