unpackaged/main/default/objects/LendVantage_Input__c/fields/Lead_Response_Channel__c.field-meta.xml
<CustomField>
    <fullName>Lead_Response_Channel__c</fullName>
    <label>Lead Response Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>