unpackaged/main/default/objects/LendVantage_Input__c/fields/Lender_1_Min_Term__c.field-meta.xml
<CustomField>
    <fullName>Lender_1_Min_Term__c</fullName>
    <label>Lender 1 Min Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>