unpackaged/main/default/objects/LendVantage_Input__c/fields/Lender_1_Projected_Loan__c.field-meta.xml
<CustomField>
    <fullName>Lender_1_Projected_Loan__c</fullName>
    <label>Lender 1 Projected Loan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>