unpackaged/main/default/objects/LendVantage_Input__c/fields/Lender_2_Max_Term__c.field-meta.xml
<CustomField>
    <fullName>Lender_2_Max_Term__c</fullName>
    <label>Lender 2 Max Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>