unpackaged/main/default/objects/LendVantage_Input__c/fields/Lender_2_Projected_Terms__c.field-meta.xml
<CustomField>
    <fullName>Lender_2_Projected_Terms__c</fullName>
    <label>Lender 2 Projected Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>