unpackaged/main/default/objects/LendVantage_Input__c/fields/Lender_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Lender_Name_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender Name 1</label>
    <referenceTo>API_Offer_Matrix__c</referenceTo>
    <relationshipLabel>LendVantage (Position 1)</relationshipLabel>
    <relationshipName>LendVantage_Inputs_Position_1</relationshipName>
    <type>Lookup</type>
</CustomField>