unpackaged/main/default/objects/LendVantage_Input__c/fields/Lender_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Lender_Name_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender Name 2</label>
    <referenceTo>API_Offer_Matrix__c</referenceTo>
    <relationshipLabel>LendVantage (Position 2)</relationshipLabel>
    <relationshipName>LendVantage_Inputs_Position_2</relationshipName>
    <type>Lookup</type>
</CustomField>