unpackaged/main/default/objects/LendVantage_Input__c/fields/Lender_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Lender_Name_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender Name 3</label>
    <referenceTo>API_Offer_Matrix__c</referenceTo>
    <relationshipLabel>LendVantage (Position 3)</relationshipLabel>
    <relationshipName>LendVantage_Inputs_Position_3</relationshipName>
    <type>Lookup</type>
</CustomField>