unpackaged/main/default/objects/LendVantage_Input__c/fields/LendVantage_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>LendVantage_Application_Id__c</fullName>
    <displayFormat>LV{0000000}</displayFormat>
    <label>LendVantage Application Id</label>
    <type>AutoNumber</type>
</CustomField>