unpackaged/main/default/objects/LendVantage_Input__c/fields/LV_Response_Channel__c.field-meta.xml
<CustomField>
    <fullName>LV_Response_Channel__c</fullName>
    <label>LV Response Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>