unpackaged/main/default/objects/LendVantage_Input__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>LendVantage Inputs</relationshipLabel>
    <relationshipName>LendVantage_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>