unpackaged/main/default/objects/LendVantage_Input__c/fields/Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_First_Name__c</fullName>
    <label>Owner First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>