unpackaged/main/default/objects/LendVantage_Input__c/fields/PreQual_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>PreQual_Error_Message__c</fullName>
    <label>PreQual Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>