unpackaged/main/default/objects/LendVantage_Input__c/fields/PreQual_Status__c.field-meta.xml
<CustomField>
    <fullName>PreQual_Status__c</fullName>
    <label>PreQual Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>