unpackaged/main/default/objects/LendVantage_Input__c/fields/Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URL__c</fullName>
    <label>Redirect URL</label>
    <type>Url</type>
</CustomField>