unpackaged/main/default/objects/LendVantage_Input__c/fields/Total_Months_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Total_Months_in_Business__c</fullName>
    <label>Total Months in Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>