unpackaged/main/default/objects/LendVantage_Input__c/fields/Total_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Total_Repayment__c</fullName>
    <label>Total Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>